<resources>
    <string name="app_name">My Test</string>
    <string name="please_enter_your_last_name">please enter your last name</string>
    <string name="please_enter_your_first_name">please enter your first name</string>
    <string name="please_enter_your_age">please enter your age</string>
    <string name="please_enter_your_email">please enter your email</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="approve">approve</string>
    <string name="sobh">اذان صبح :</string>
    <string name="tolo">طلوع آفتاب :</string>
    <string name="zohr">اذان ظهر :</string>
    <string name="asr">وقت عصر :</string>
    <string name="maghrib">اذان مغرب :</string>
    <string name="isha">وقت عشا :</string>
    <string name="please_enter_your_title">Enter your title</string>
    <string name="please_enter_your_text">Enter yout text</string>
    <string name="add">add note</string>
    <string name="edit">edit</string>
    <string name="returnl">Return to Notes List</string>
    <string name="Delete">Delete note</string>
</resources>
