<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>
    <TextView
        android:background="@color/colorOrange"
        android:id="@+id/noteText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="text|textMultiLine"
        android:textSize="18dp"
        android:gravity="top" />

    <Button
        android:id="@+id/btnCancelShowNotesActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/returnl" />
    <Button
        android:id="@+id/btnEditNoteActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/edit" />
    <Button
        android:id="@+id/btnDelNoteActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/Delete" />
</android.support.v7.widget.LinearLayoutCompat>

